[package]
name = "use-ssz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs", default-features = false, rev="e56ff880c58d0f62af254a2bd1324d580422edcb" }
